--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
             <div class="col-sm-4 text-center mb-3">
                 <i class="fa fa-2x fa-map-marker-alt mb-3 text-primary"></i>
                 <h4 class="font-weight-bold">Address</h4>
-                <p>123 Street, New York, USA</p>
+                <p>3 Humabon, Makati City, PH</p>
             </div>
             <div class="col-sm-4 text-center mb-3">
                 <i class="fa fa-2x fa-phone-alt mb-3 text-primary"></i>
