--- a/contact.html
+++ b/contact.html
@@ -170,7 +170,7 @@
         <div class="container border-top border-dark pt-5">
             <p class="m-0 text-center text-white">
                 &copy; <a class="text-white font-weight-bold" href="#">APC_PROJECT</a>. All Rights Reserved. Designed by
-                <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                <a class="text-white font-weight-bold" href="https://htmlcodex.com">BESANA, BUENO, MAGALONG, AND TUYA</a>
             </p>
         </div>
     </div>
