--- a/feature.html
+++ b/feature.html
@@ -245,7 +245,7 @@
         </div>
         <div class="container border-top border-dark pt-5">
             <p class="m-0 text-center text-white">
-                &copy; <a class="text-white font-weight-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by
+                &copy; <a class="text-white font-weight-bold" href="#">Fitness Lab</a>. Action is the foundational key to all success.
                 <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
             </p>
         </div>
